<resources>

    <string name="app_name">Basket</string>

    <string name="navigation_shopping_lists">Lists</string>
    <string name="navigation_groups">Groups</string>
    <string name="navigation_articles">Articles</string>
    <string name="navigation_categories">Categories</string>
    <string name="navigation_settings">Settings</string>

    <string name="settings_title">Settings</string>

    <string name="navigation_button_desc">Navigation button</string>
    <string name="navigation_item_icon_desc">Navigation target icon</string>

    <string name="import_presets_headline">Presets Language</string>
    <string name="import_presets_info">Select the language for preset articles.</string>
    <string name="import_presets_button">Start</string>

    <string-array name="presets_languages">
        <item>en</item>
        <item>de</item>
    </string-array>

    <string name="pref_title_category_lists">Lists</string>
    <string name="pref_title_prevent_sleep">Prevent sleep</string>
    <string name="pref_summary_prevent_sleep">Prevent the screen from automatically turning off while a list is displayed</string>
    <string name="pref_title_compact_lists">Display lists compactly</string>
    <string name="pref_title_category_day_night_mode">Night Mode</string>
    <string name="pref_title_system_day_night_mode">Use night mode system setting</string>
    <string name="pref_title_day_night_mode">Enable night mode</string>

</resources>
