<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/listsFragment"
        android:checkable="true"
        android:icon="@drawable/ic_shopping_lists_24"
        android:title="@string/navigation_shopping_lists"/>

    <item
        android:id="@id/groupsFragment"
        android:checkable="true"
        android:icon="@drawable/ic_groups_24"
        android:title="@string/navigation_groups"/>

    <item
        android:id="@id/articlesFragment"
        android:checkable="true"
        android:icon="@drawable/ic_articles_24"
        android:title="@string/navigation_articles"/>

    <item
        android:id="@id/categoriesFragment"
        android:checkable="true"
        android:icon="@drawable/ic_categories_24"
        android:title="@string/navigation_categories"/>

    <item
        android:id="@id/settingsFragment"
        android:checkable="true"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/navigation_settings"/>

    <item
        android:id="@id/helpAndFeedbackFragment"
        android:checkable="true"
        android:icon="@drawable/ic_help_24"
        android:title="@string/navigation_help_and_feedback"/>

</menu>
