<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/two"
        android:paddingBottom="@dimen/two">

        <ImageView
            android:id="@+id/image"
            style="@style/Widget.Basket.EmptyImage"
            app:layout_constraintBottom_toTopOf="@id/headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_translate_24"/>

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/three"
            android:text="@string/import_presets_headline"
            android:textAppearance="@style/Widget.Basket.Headline"
            app:layout_constraintBottom_toTopOf="@id/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"/>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/two"
            android:layout_marginTop="@dimen/one"
            android:layout_marginEnd="@dimen/two"
            android:gravity="center_horizontal"
            android:text="@string/import_presets_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toTopOf="@id/radioGroup"
            app:layout_constraintTop_toBottomOf="@id/headline"/>

        <LinearLayout
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/three"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintTop_toBottomOf="@id/info"
            tools:layout_height="128dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.Basket.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/three"
            android:text="@string/import_presets_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
